@@ -73,7 +73,6 @@ legend span {font-size:114%;background:#eee;padding:3px;color:#000;}
 th {color:#000;background:#ddd;border-right:1px solid #fff;padding:3px;}
 td {padding:2px 8px;vertical-align:middle;}
 td form {display:inline;}
-fieldset table {border:1px solid #c0c0c0;}
 fieldset p {margin:7px 0;}
 select option {padding:0 4px;}
 ul.closed {display:none;}
